--- a/bower.json
+++ b/bower.json
@@ -27,26 +27,11 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
     "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
     "test-fixture": "PolymerElements/test-fixture#^2.0.0",
     "web-component-tester": "v6.0.0-prerelease.5"
-  },
-  "resolutions": {
-    "iron-flex-layout": "2.0-preview",
-    "iron-icon": "2.0-preview",
-    "paper-styles": "2.0-preview",
-    "test-fixture": "^2.0.0",
-    "polymer": "2.0-preview",
-    "iron-meta": "2.0-preview",
-    "paper-behaviors": "2.0-preview",
-    "iron-behaviors": "2.0-preview",
-    "iron-checked-element-behavior": "2.0-preview",
-    "paper-ripple": "2.0-preview",
-    "iron-validatable-behavior": "2.0-preview",
-    "webcomponentsjs": "v1",
-    "iron-a11y-keys-behavior": "2.0-preview"
   },
   "variants": {
     "1.x": {
@@ -61,7 +46,8 @@
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
         "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
         "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
-        "test-fixture": "PolymerElements/test-fixture#^1.0.0"
+        "test-fixture": "PolymerElements/test-fixture#^1.0.0",
+        "web-component-tester": "^4.0.0"
       }
     }
   }
