--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "name": "@polymer/paper-badge",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@polymer/iron-demo-helpers": "^3.0.0-pre.20",
-    "@polymer/iron-icons": "^3.0.0-pre.21",
-    "@polymer/paper-icon-button": "^3.0.0-pre.20",
+    "@polymer/iron-demo-helpers": "^3.0.0-pre.22",
+    "@polymer/iron-icons": "^3.0.0-pre.22",
+    "@polymer/paper-icon-button": "^3.0.0-pre.22",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "wct-browser-legacy": "^1.0.1",
     "webmat": "^0.2.0",
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "format": "webmat",
-    "generate-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "generate-types": "gen-typescript-declarations --deleteExisting --outDir . --verify",
     "prepack": "npm run generate-types"
   },
   "version": "3.0.0-pre.22",
@@ -32,9 +32,9 @@
   "author": "The Polymer Authors",
   "dependencies": {
     "@polymer/polymer": "^3.0.0",
-    "@polymer/iron-resizable-behavior": "^3.0.0-pre.20",
-    "@polymer/paper-styles": "^3.0.0-pre.20",
-    "@polymer/iron-icon": "^3.0.0-pre.20",
-    "@polymer/iron-flex-layout": "^3.0.0-pre.20"
+    "@polymer/iron-resizable-behavior": "^3.0.0-pre.22",
+    "@polymer/paper-styles": "^3.0.0-pre.22",
+    "@polymer/iron-icon": "^3.0.0-pre.22",
+    "@polymer/iron-flex-layout": "^3.0.0-pre.22"
   }
 }
