--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "name": "@polymer/paper-badge",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@polymer/iron-demo-helpers": "^3.0.0-pre.24",
-    "@polymer/iron-icons": "^3.0.0-pre.24",
-    "@polymer/paper-icon-button": "^3.0.0-pre.24",
+    "@polymer/iron-demo-helpers": "^3.0.1",
+    "@polymer/iron-icons": "^3.0.0-pre.25",
+    "@polymer/paper-icon-button": "^3.0.0-pre.25",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "wct-browser-legacy": "^1.0.1",
     "webmat": "^0.2.0",
@@ -32,9 +32,9 @@
   "author": "The Polymer Authors",
   "dependencies": {
     "@polymer/polymer": "^3.0.0",
-    "@polymer/iron-resizable-behavior": "^3.0.0-pre.24",
-    "@polymer/paper-styles": "^3.0.0-pre.24",
-    "@polymer/iron-icon": "^3.0.0-pre.24",
-    "@polymer/iron-flex-layout": "^3.0.0-pre.24"
+    "@polymer/iron-resizable-behavior": "^3.0.0-pre.25",
+    "@polymer/paper-styles": "^3.0.0-pre.25",
+    "@polymer/iron-icon": "^3.0.0-pre.25",
+    "@polymer/iron-flex-layout": "^3.0.0-pre.25"
   }
 }
